--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
     "winston": "^3.11.0",
     "yahoo-finance2": "^2.9.1"
   },
